--- a/commodity-4.html
+++ b/commodity-4.html
@@ -20,7 +20,7 @@
 	<!-- ********************************************************************************** -->
 	<body>
 		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-		  <a class="navbar-brand" href="#"><a href="index-1.html"><img src="assets/image/logo.jpg" class="logo"></a></a>
+		  <a class="navbar-brand" href="#"><a href="index.html"><img src="assets/image/logo.jpg" class="logo"></a></a>
 		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		    <span class="navbar-toggler-icon"></span>
 		  </button>
@@ -95,7 +95,7 @@
 
 <!--article******************************************************-->
 <article>
-	<div class="Contents"><a href="index-1.html">首頁</a>/全部商品/<a href="commodity-4.html">毛筆</a></div>
+	<div class="Contents"><a href="index.html">首頁</a>/全部商品/<a href="commodity-4.html">毛筆</a></div>
 	
  <!-- part2 -->
  	<h1>&diams;毛筆</h1>
