--- a/commodity-3.html
+++ b/commodity-3.html
@@ -47,7 +47,7 @@
 
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="#">會員專區</a>
+		        <a class="nav-link" href="membership.html">會員專區</a>
 		      </li>
 		      <li class="nav-item">
 		        <a class="nav-link" href="#">購物車</a>
