--- a/membership.html
+++ b/membership.html
@@ -30,22 +30,22 @@
 		        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">全部商品
 		        </a>
 		        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-		          <a class="dropdown-item" href="html/commodity-1.html">鋼筆</a>
-		          <a class="dropdown-item" href="html/commodity-2.html">鋼珠筆</a>
-		          <a class="dropdown-item" href="html/commodity-3.html">原子筆</a>
-		          <a class="dropdown-item" href="html/commodity-4.html">毛筆</a>
-		          <a class="dropdown-item" href="html/commodity-5.html">墨水</a>
+		          <a class="dropdown-item" href="commodity-1.html">鋼筆</a>
+		          <a class="dropdown-item" href="commodity-2.html">鋼珠筆</a>
+		          <a class="dropdown-item" href="commodity-3.html">原子筆</a>
+		          <a class="dropdown-item" href="commodity-4.html">毛筆</a>
+		          <a class="dropdown-item" href="commodity-5.html">墨水</a>
 		          <div class="dropdown-divider"></div>
-		          <a class="dropdown-item" href="html/commodity-x.html">客製化鋼筆</a>
+		          <a class="dropdown-item" href="commodity-x.html">客製化鋼筆</a>
 		        </div>
 <!-- -->		      
 		      <li class="nav-item active">
-		        <a class="nav-link" href="html/hot.html">熱銷促銷 <span class="sr-only">(current)</span></a>
+		        <a class="nav-link" href="hot.html">熱銷促銷 <span class="sr-only">(current)</span></a>
 		      </li>
 
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="#">會員專區</a>
+		        <a class="nav-link" href="membership.html">會員專區</a>
 		      </li>
 		      <li class="nav-item">
 		        <a class="nav-link" href="#">購物車</a>
