--- a/production-1.html
+++ b/production-1.html
@@ -45,14 +45,9 @@
 		      <li class="nav-item active">
 		        <a class="nav-link" href="#">熱銷促銷 <span class="sr-only">(current)</span></a>
 		      </li>
-
-		      <li class="nav-item">
-		        <a class="nav-link" href="#">關於我們</a>
-		      </li>
-
 		      </li>
 		      <li class="nav-item">
-		        <a class="nav-link" href="#">會員登入</a>
+		        <a class="nav-link" href="membership.html">會員登入</a>
 		      </li>
 		      <li class="nav-item">
 		        <a class="nav-link" href="#">購物車</a>
