--- a/commodity-4.html
+++ b/commodity-4.html
@@ -36,7 +36,7 @@
 		          <a class="dropdown-item" href="commodity-2.html">鋼珠筆</a>
 		          <a class="dropdown-item" href="commodity-3.html">原子筆</a>
 		          <a class="dropdown-item" href="commodity-4.html">毛筆</a>
-		          <a class="dropdown-item" href="html/commodity-5.html">墨水</a>
+		          <a class="dropdown-item" href="commodity-5.html">墨水</a>
 		          <div class="dropdown-divider"></div>
 		          <a class="dropdown-item" href="commodity-x.html">客製化鋼筆</a>
 		        </div>
