--- a/production-1.html
+++ b/production-1.html
@@ -94,19 +94,53 @@
 
 <!--article******************************************************-->
 	<article>
-		<div class="Contents">首頁/商品目錄頁／商品頁/（商品名稱）</div>
+		<!--  -->
+		<nav aria-label="breadcrumb">
+		  <ol class="breadcrumb">
+		    <li class="breadcrumb-item"><a href="#">Home</a></li>
+		    <li class="breadcrumb-item"><a href="#">Library</a></li>
+		    <li class="breadcrumb-item active" aria-current="page"></li>
+		  </ol>
+		</nav>
 
-		<img src="assets/image/one.jpg" class="main"><br>
+		<!--  -->
+		
+		<table class="table">
+		   <tr>
+		     <td><img src="assets/image/one.jpg" class="main"></td>
+		     <td><dir class="information">
+		      <h1>SKB文明鋼筆-八熊堂系列鋼筆</h1>
 
-      <img src="assets/productimg/1.jpg" class="preview">
-      <img src="assets/productimg/2.jpg" class="preview">
-      <img src="assets/productimg/3.jpg" class="preview">
-      <img src="assets/productimg/4.jpg" class="preview">
-      <img src="assets/productimg/5.jpg" class="preview">
+		       <div class="dropdown">
+				  <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">數量
+				  </button>
+				  <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+				    <a class="dropdown-item" href="#">1</a>
+				    <a class="dropdown-item" href="#">2</a>
+				    <a class="dropdown-item" href="#">3</a>
+				    <a class="dropdown-item" href="#">4</a>
+				    <a class="dropdown-item" href="#">5</a>
+				    <a class="dropdown-item" href="#">6</a>
+				    <a class="dropdown-item" href="#">7</a>
+				    <a class="dropdown-item" href="#">8</a>
+				    <a class="dropdown-item" href="#">9</a>
+				    <a class="dropdown-item" href="#">10+</a>
+				  </div>
+			    </div>
 
+		     </dir></td>
+		   </tr>
+	    </table>
+
+	      <img src="assets/productimg/1.jpg" class="preview">
+	      <img src="assets/productimg/2.jpg" class="preview">
+	      <img src="assets/productimg/3.jpg" class="preview">
+	      <img src="assets/productimg/4.jpg" class="preview">
+	      <img src="assets/productimg/5.jpg" class="preview">
+
+		
 	</article>
-    
-
+   
 <!--footer******************************************************-->
     <footer>
       <p>design by CYCU_IM </p>
