--- a/commodity-1.html
+++ b/commodity-1.html
@@ -102,15 +102,21 @@
         <div class="row">
           <div class="col-12 col-md-4">
             <div class="item">
+	         <a href="production-1.html">
               <img src="assets/productimg/product1/1-1.jpg">
               <h3>SKB文明鋼筆-八熊堂系列鋼筆</h3>
               <p>NT1500</p>
+             </a>
+             <div>
               <img src="assets/productimg/product2/2-1.jpg">
               <h3>SKB文明鋼筆-雅仕系列鋼筆-淺色版(3色)</h3>
               <p>NT1400</p>
+             </div>
+             <div>
               <img src="assets/productimg/product3/3-1.jpg">
               <h3>六角檀木鋼筆(黃檀、綠檀)</h3>
               <p>NT1300</p>
+              </div>
             </div>
           </div>
           <div class="col-12 col-md-4">
