--- a/commodity-4.html
+++ b/commodity-4.html
@@ -29,7 +29,7 @@
 		    <ul class="navbar-nav mr-auto">
 <!--下拉選單-->
 		      <li class="nav-item dropdown">
-		        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">全部商品
+		        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">商品專區
 		        </a>
 		        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
 		          <a class="dropdown-item" href="commodity-1.html">鋼筆</a>
@@ -42,7 +42,7 @@
 		        </div>
 <!-- -->		      
 		      <li class="nav-item active">
-		        <a class="nav-link" href="hot.html">熱銷促銷 <span class="sr-only">(current)</span></a>
+		        <a class="nav-link" href="hot.html">熱銷促銷<span class="sr-only">(current)</span></a>
 		      </li>
 
 		      </li>
@@ -95,7 +95,7 @@
 
 <!--article******************************************************-->
 <article>
-	<div class="Contents"><a href="index.html">首頁</a>/全部商品/<a href="commodity-4.html">毛筆</a></div>
+	<div class="Contents"><a href="index.html">首頁</a>/商品專區/<a href="commodity-4.html">毛筆</a></div>
 	
  <!-- part2 -->
  	<h1>&diams;毛筆</h1>
