--- a/index.html
+++ b/index.html
@@ -43,20 +43,32 @@
 		        <a class="nav-link" href="hot.html">熱銷促銷 <span class="sr-only">(current)</span></a>
 		      </li>
 
-		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="membership.html">會員專區</a>
-		      </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">會員專區
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="＃">會員註冊</a>
+              <a class="dropdown-item" href="＃">會員登入</a>
+            </div>
+		      
+          <li class="nav-item">
+            <a class="nav-link" href="#">願望清單</a>
+          </li>
+
 		      <li class="nav-item">
 		        <a class="nav-link" href="#">購物車</a>
 		      </li>
 
-		    </ul>
+          <li class="nav-item">
+            <a class="nav-link" href="#">關於我們</a>
+          </li>
 
-		    <form class="form-inline my-2 my-lg-0">
-		      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-		      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-		    </form>
+		    </ul>
+        <!-- 搜尋bar -->
+          <form>
+            <input type="text" name="search" placeholder="Search..">
+          </form>
+
           </div>
         </nav>
 
@@ -114,6 +126,7 @@
     </article>
 <!--  -->
     <footer>
+    <img src="assets/image/logo.jpg" class="button_logo">
       <p>design by CYCU_IM </p>
     </footer>
 <!--  -->
