--- a/commodity-1.html
+++ b/commodity-1.html
@@ -19,85 +19,64 @@
 	</head>
 	<!-- ********************************************************************************** -->
 	<body>
-		<nav class="navbar navbar-expand-lg navbar-light bg-light" class="header" id="myHeader">
-		  <a class="navbar-brand" href="#"><a href="index.html"><img src="assets/image/logo.jpg" class="logo"></a></a>
-		  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-		    <span class="navbar-toggler-icon"></span>
-		  </button>
+		<nav class="navbar navbar-expand-lg navbar-light bg-light">
+      <a class="navbar-brand" href="#"><a href="index.html"><img src="assets/image/logo.jpg" class="logo"></a></a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-		  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-		    <ul class="navbar-nav mr-auto">
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
 <!--下拉選單-->
-		      <li class="nav-item dropdown">
-		        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">全部商品
-		        </a>
-		        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-		          <a class="dropdown-item" href="commodity-1.html">鋼筆</a>
-		          <a class="dropdown-item" href="commodity-2.html">鋼珠筆</a>
-		          <a class="dropdown-item" href="commodity-3.html">原子筆</a>
-		          <a class="dropdown-item" href="commodity-4.html">毛筆</a>
-		          <a class="dropdown-item" href="commodity-5.html">墨水</a>
-		          <div class="dropdown-divider"></div>
-		          <a class="dropdown-item" href="commodity-x.html">客製化鋼筆</a>
-		        </div>
-<!-- -->		      
-		      <li class="nav-item active">
-		        <a class="nav-link" href="hot.html">熱銷促銷 <span class="sr-only">(current)</span></a>
-		      </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">商品專區
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="commodity-1.html">鋼筆</a>
+              <a class="dropdown-item" href="commodity-2.html">鋼珠筆</a>
+              <a class="dropdown-item" href="commodity-3.html">原子筆</a>
+              <a class="dropdown-item" href="commodity-4.html">毛筆</a>
+              <a class="dropdown-item" href="commodity-5.html">墨水</a>
+              <div class="dropdown-divider"></div>
+              <a class="dropdown-item" href="commodity-x.html">客製化鋼筆</a>
+            </div>
+<!-- -->          
+          <li class="nav-item active">
+            <a class="nav-link" href="hot.html">熱銷促銷 <span class="sr-only">(current)</span></a>
+          </li>
 
-		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="membership.html">會員專區</a>
-		      </li>
-		      <li class="nav-item">
-		        <a class="nav-link" href="#">購物車</a>
-		      </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">會員專區
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="＃">會員註冊</a>
+              <a class="dropdown-item" href="＃">會員登入</a>
+            </div>
+          
+          <li class="nav-item">
+            <a class="nav-link" href="#">願望清單</a>
+          </li>
 
-		    </ul>
+          <li class="nav-item">
+            <a class="nav-link" href="#">購物車</a>
+          </li>
 
-		    <form class="form-inline my-2 my-lg-0">
-		      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-		      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-		    </form>
+          <li class="nav-item">
+            <a class="nav-link" href="#">關於我們</a>
+          </li>
+
+        </ul>
+        <!-- 搜尋bar -->
+          <form>
+            <input type="text" name="search" placeholder="Search..">
+          </form>
+
           </div>
         </nav>
-
-
-<!--aside*************************************************************-->
-    <!-- <aside> 
-	    <ul class="nav flex-column">
-		  <li class="nav-item">
-		    <a class="nav-link active" href="#">促銷商品</a>
-		  </li>
-		 <li class="nav-item">
-		    <a class="nav-link" href="#">熱銷排行</a>
-		  </li>
-		  <li class="nav-item">
-		    <a class="nav-link" href="#">鋼筆</a>
-		  </li>
-		  <li class="nav-item">
-		    <a class="nav-link" href="#">鋼珠筆</a>
-		  </li>
-		  <li class="nav-item">
-		    <a class="nav-link" href="#">原子筆</a>
-		  </li>
-		  <li class="nav-item">
-		    <a class="nav-link" href="#">毛筆</a>
-		  </li>
-		  <li class="nav-item">
-		    <a class="nav-link" href="#">墨水</a>
-		  </li>
-		  <li class="nav-item">
-		    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">客製化</a>
-		  </li>
-		</ul>
-    </aside>
-    -->
-
 <!--article******************************************************-->
 <article>
-  	<div class="Contents"><a href="index.html">首頁</a>/全部商品/<a href="commodity-1.html">鋼筆</a></div>
-  <!--側邊欄位-->
+
+  <!--側邊欄位、麵包屑-->
     <div id="mySidebar" class="sidebar">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
       <a href="#">首頁</a>
@@ -113,9 +92,19 @@
       <a href="#">購物車</a>
       <a href="#">關於我們</a>
     </div>
-    <div id="main">
-       <button class="openbtn" onclick="openNav()">☰ Open Contents</button>  
-    </div>
+
+    <nav aria-label="breadcrumb">
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item">
+          <div id="main">
+           <p class="openbtn" onclick="openNav()">☰ Open list</p>
+          </div>
+        </li>
+        <li class="breadcrumb-item"><a href="index.html">首頁</a></li>
+        <li class="breadcrumb-item">商品專區</li>
+        <li class="breadcrumb-item active tit" aria-current="page">&diams;鋼筆</li>
+      </ol>
+    </nav>
 
     <script>
     function openNav() {
@@ -128,9 +117,7 @@
     }
     </script>
   <!--  -->
-  <div class="header" id="myHeader">
-    <h2>&diams;鋼筆</h2>
-  </div>
+
 
 <div class="content">
        <div class="container">
@@ -156,9 +143,11 @@
           </div>
           <div class="col-12 col-md-4">
             <div class="item">
-              <img src="assets/productimg/product4/4-1.jpg">
-              <h3>SKB文明鋼筆-國旗鋼筆</h3>
-              <p>NT1600</p>
+              <a href="production-2.html">
+                <img src="assets/productimg/product4/4-1.jpg">
+                <h3>SKB文明鋼筆-國旗鋼筆</h3>
+                <p>NT1600</p>
+              </a>
               <img src="assets/productimg/product5/5-1.jpg">
               <h3>title5</h3>
               <p>NT1700</p>
