--- a/index.html
+++ b/index.html
@@ -126,7 +126,12 @@
     </article>
 <!--  -->
     <footer>
-    <img src="assets/image/logo.jpg" class="button_logo">
+      <div class="DIV1">
+       <img src="assets/image/logo.jpg" class="button_logo">
+      </div>
+      <div class="DIV2">
+       <p></p>
+      </div>
       <p>design by CYCU_IM </p>
     </footer>
 <!--  -->
