--- a/production-2.html
+++ b/production-2.html
@@ -124,25 +124,25 @@
 		   <tr>
 		     <td>
 			    <div class="container">
-			      <img src="assets/productimg/product1/1-1.jpg" class="main" id="expandedImg" style="width:500px; height:500px;">
+			      <img src="assets/productimg/product4/4-1.jpg" class="main" id="expandedImg" style="width:500px; height:500px;">
 				  <div id="imgtext"></div>
 				</div>
 			 </td>
 
 		     <td><dir class="information">
-		      <h1>SKB文明鋼筆-八熊堂系列鋼筆</h1>
+		      <h1>SKB文明鋼筆-國旗鋼筆</h1>
 			  <h2></h2>
-		      <h2>NT399</h2>
+		      <h2>NT1010</h2>
 		      <p></p>
 		      <h5>產品規格:</h5>
-		      <p>＊材質：不鏽鋼、銅、塑膠</p>
-		      <p>＊筆尖/筆芯：F尖</p>
-		      <p>＊最大值徑：13mm </p>
-		      <p>＊合蓋長度：141mm</p>
+		      <p>＊材質：鋁合金握位、透明筆身</p>
+		      <p>＊筆尖/筆芯：EF尖 約0.4~0.5mm</p>
+		      <p>＊闔蓋長度：132.4mm</p>
+		      
 		      <h5>規格型號:</h5>
-		      <p> 4710677046480 紅色 / 4710677046466 白色 / 4710677046473 黑色 </p>
+		      <p> 4710677043175</p>
 		      <p></p>
-		      <p>庫存狀況:缺貨</p>
+		      <p>庫存狀況:現貨中</p>
 
             <table>
               <tr>
@@ -176,10 +176,10 @@
 	    </table>
 
         <div>
-	      <img src="assets/productimg/product1/1-1.jpg" class="preview" onclick="myFunction(this)">
-	      <img src="assets/productimg/product1/1-2.jpg" class="preview" onclick="myFunction(this)">
-	      <img src="assets/productimg/product1/1-3.jpg" class="preview" onclick="myFunction(this)">
-	      <img src="assets/productimg/product1/1-4.jpg" class="preview" onclick="myFunction(this)">
+	      <img src="assets/productimg/product4/4-1.jpg" class="preview" onclick="myFunction(this)">
+	      <img src="assets/productimg/product4/4-2.jpg" class="preview" onclick="myFunction(this)">
+	      <img src="assets/productimg/product4/4-7.jpg" class="preview" onclick="myFunction(this)">
+	      <img src="assets/productimg/product4/4-5.jpg" class="preview" onclick="myFunction(this)">
 	      
 	    </div>
 
@@ -195,6 +195,7 @@
 <!-- tabs********************************************************* -->
 		<div class="tab">
 		  <button class="tablinks" onclick="openCity(event, 'London')">商品介紹</button>
+		  <button class="tablinks" onclick="openCity(event, 'Tokyo')">使用說明</button>
 		  <button class="tablinks" onclick="openCity(event, 'Paris')">商品評論</button>
 		  <button class="tablinks" onclick="openCity(event, 'Tokyo')">類似商品</button>
 		</div>
@@ -203,14 +204,16 @@
 		  <h3>商品介紹</h3>
 		  <p>
 		    ＊此商品無法刻字<br>
-			＊不鏽鋼歐系筆尖設計<br>
-			＊F尖筆頭，書寫順滑<br>
-			＊黑白桿PC材質<br>
-			＊紅桿表面金屬質感烤漆<br>
+			＊此筆款附贈『卡式墨水』一管、『亮鉻色吸墨器』一支<br>
+			＊科技陽極鋁合金<br>
+			＊透明輕量化筆桿<br>
+			＊滑板風優雅筆夾<br>
+			＊德國原裝EF筆尖<br>
 		  </p>
-		  <img src="assets/productimg/product1/1-5.jpg">
-		  <img src="assets/productimg/product1/1-6.jpg">
-		  <img src="assets/productimg/product1/1-7.jpg">
+		  <img src="assets/productimg/product4/4-3.jpg">
+		  <img src="assets/productimg/product4/4-4.jpg">
+		  <img src="assets/productimg/product4/4-6.jpg">
+		  <img src="assets/productimg/product4/4-8.jpg">
 
 		</div>
 
