--- a/production-2.html
+++ b/production-2.html
@@ -194,13 +194,13 @@
 	    </script>
 <!-- tabs********************************************************* -->
 		<div class="tab">
-		  <button class="tablinks" onclick="openCity(event, 'London')">商品介紹</button>
-		  <button class="tablinks" onclick="openCity(event, 'Tokyo')">使用說明</button>
-		  <button class="tablinks" onclick="openCity(event, 'Paris')">商品評論</button>
-		  <button class="tablinks" onclick="openCity(event, 'Tokyo')">類似商品</button>
+		  <button class="tablinks" onclick="openCity(event, 'introduce')">商品介紹</button>
+		  <button class="tablinks" onclick="openCity(event, 'a')">使用說明</button>
+		  <button class="tablinks" onclick="openCity(event, 'comment')">商品評論</button>
+		  <button class="tablinks" onclick="openCity(event, 'smiler')">類似商品</button>
 		</div>
 
-		<div id="London" class="tabcontent">
+		<div id="introduce" class="tabcontent">
 		  <h3>商品介紹</h3>
 		  <p>
 		    ＊此商品無法刻字<br>
@@ -217,12 +217,17 @@
 
 		</div>
 
-		<div id="Paris" class="tabcontent">
+        <div id="a" class="tabcontent">
+		  <h3>使用說明</h3>
+		  <p>hello</p> 
+		</div>
+
+		<div id="comment" class="tabcontent">
 		  <h3>商品評論</h3>
 		  <p>hello</p> 
 		</div>
 
-		<div id="Tokyo" class="tabcontent">
+		<div id="smiler" class="tabcontent">
 		  <h3>類似商品</h3>
 		  <p>one two three</p>
 		</div>
