--- a/commodity-1.html
+++ b/commodity-1.html
@@ -79,14 +79,14 @@
   <!--側邊欄位、麵包屑-->
     <div id="mySidebar" class="sidebar">
       <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
-      <a href="#">首頁</a>
+      <a href="index.html">首頁</a>
       <hr>
-      <a href="#">鋼筆</a>
-      <a href="#">鋼珠筆</a>
-      <a href="#">原子筆</a>
-      <a href="#">毛筆</a>
-      <a href="#">墨水</a>
-      <a href="#">客製化</a>
+      <a href="commodity-1.html">鋼筆</a>
+      <a href="commodity-2.html">鋼珠筆</a>
+      <a href="commodity-3.html">原子筆</a>
+      <a href="commodity-4.html">毛筆</a>
+      <a href="commodity-5.html">墨水</a>
+      <a href="commodity-x.html">客製化</a>
       <hr>
       <a href="#">願望清單</a>
       <a href="#">購物車</a>
@@ -188,12 +188,12 @@ function myFunction() {
 }
 </script>
 
- <!--換頁*****************************************************************-->
-      <div class="change_page">
+<!--換頁*****************************************************************-->
+      <nav aria-label="Page navigation example">
         <ul class="pagination">
           <li class="page-item">
            <a class="page-link" href="#" aria-label="Previous">
-            <span aria-hidden="true">&laquo;</span>
+             <span aria-hidden="true">&laquo;</span> <!--前一頁-->
            </a>
           </li>
           <li class="page-item"><a class="page-link" href="commodity-1.html">1</a></li>
@@ -203,12 +203,11 @@ function myFunction() {
           <li class="page-item"><a class="page-link" href="commodity-5.html">5</a></li>
           <li class="page-item">
            <a class="page-link" href="commodity-2.html" aria-label="Next">
-            <span aria-hidden="true">&raquo;</span>
+            <span aria-hidden="true">&raquo;</span><!--後一頁-->
            </a>
           </li>
         </ul>
-      </div>
-<!--  -->
+       </nav>
 
   <!--  *****************************************************************-->
 </article>
