--- a/commodity-3.html
+++ b/commodity-3.html
@@ -55,50 +55,57 @@
 
 		    </ul>
 
-		    <form class="form-inline my-2 my-lg-0">
-		      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-		      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-		    </form>
+        <!-- 搜尋bar -->
+          <form>
+            <input type="text" name="search" placeholder="Search..">
+          </form>
           </div>
         </nav>
 
-<!--aside*************************************************************-->
-    <!-- <aside> 
-	    <ul class="nav flex-column">
-		  <li class="nav-item">
-		    <a class="nav-link active" href="#">促銷商品</a>
-		  </li>
-		 <li class="nav-item">
-		    <a class="nav-link" href="#">熱銷排行</a>
-		  </li>
-		  <li class="nav-item">
-		    <a class="nav-link" href="#">鋼筆</a>
-		  </li>
-		  <li class="nav-item">
-		    <a class="nav-link" href="#">鋼珠筆</a>
-		  </li>
-		  <li class="nav-item">
-		    <a class="nav-link" href="#">原子筆</a>
-		  </li>
-		  <li class="nav-item">
-		    <a class="nav-link" href="#">毛筆</a>
-		  </li>
-		  <li class="nav-item">
-		    <a class="nav-link" href="#">墨水</a>
-		  </li>
-		  <li class="nav-item">
-		    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">客製化</a>
-		  </li>
-		</ul>
-    </aside>
-    -->
-
 <!--article******************************************************-->
 <article>
-	<div class="Contents"><a href="index.html">首頁</a>/全部商品/<a href="commodity-3.html">原子筆</a></div>
-	
- <!-- part2 -->
- 	<h1>&diams;原子筆</h1>
+	<!--側邊欄位、麵包屑-->
+    <div id="mySidebar" class="sidebar">
+      <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">×</a>
+      <a href="index.html">首頁</a>
+      <hr>
+      <a href="commodity-1.html">鋼筆</a>
+      <a href="commodity-2.html">鋼珠筆</a>
+      <a href="commodity-3.html">原子筆</a>
+      <a href="commodity-4.html">毛筆</a>
+      <a href="commodity-5.html">墨水</a>
+      <a href="commodity-x.html">客製化</a>
+      <hr>
+      <a href="#">願望清單</a>
+      <a href="#">購物車</a>
+      <a href="#">關於我們</a>
+    </div>
+
+    <nav aria-label="breadcrumb">
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item">
+          <div id="main">
+           <p class="openbtn" onclick="openNav()">☰ Open list</p>
+          </div>
+        </li>
+        <li class="breadcrumb-item"><a href="index.html">首頁</a></li>
+        <li class="breadcrumb-item">商品專區</li>
+        <li class="breadcrumb-item active tit" aria-current="page">&diams;原子筆</li>
+      </ol>
+    </nav>
+
+    <script>
+    function openNav() {
+      document.getElementById("mySidebar").style.width = "250px";
+      document.getElementById("main").style.marginLeft = "250px";
+    }
+    function closeNav() {
+      document.getElementById("mySidebar").style.width = "0";
+      document.getElementById("main").style.marginLeft= "0";
+    }
+    </script>
+  <!--  -->
+
      <div class="container">
         <div class="row">
           <div class="col-12 col-md-4">
