--- a/commodity-2.html
+++ b/commodity-2.html
@@ -110,41 +110,41 @@
         <div class="row">
           <div class="col-12 col-md-4">
             <div class="item">
-              <img src="assets/productimg/1.jpg">
-              <h3>title1</h3>
-              <p>1asdfdasfdsfsd</p>
-              <img src="assets/productimg/2.jpg">
-              <h3>title2</h3>
-              <p>2asdfdasfdsfsd</p>
-              <img src="assets/productimg/3.jpg">
-              <h3>title3</h3>
-              <p>3asdfdasfdsfsd</p>
+              <img src="assets/productimg/product5/5-1.jpg">
+              <h3>SKB文明鋼筆 馬卡龍系列鋼珠筆(5色)</h3>
+              <p>NT770</p>
+              <img src="assets/productimg/product1/5-2.jpg">
+              <h3>SKB文明鋼筆 馬卡龍系列鋼珠筆(5色)</h3>
+              <p>NT900</p>
+              <img src="assets/productimg/product5/5-1.jpg">
+              <h3>SKB文明鋼筆 馬卡龍系列鋼珠筆(5色)</h3>
+              <p>NT1200</p>
             </div>
           </div>
           <div class="col-12 col-md-4">
             <div class="item">
-              <img src="assets/productimg/4.jpg">
-              <h3>title4</h3>
-              <p>4asdfdasfdsfsd</p>
-              <img src="assets/productimg/5.jpg">
-              <h3>title5</h3>
-              <p>5asdfdasfdsfsd</p>
-              <img src="assets/productimg/1.jpg">
-              <h3>title6</h3>
-              <p>6asdfdasfdsfsd</p>
+              <img src="assets/productimg/product5/5-2.jpg">
+              <h3>SKB文明鋼筆 馬卡龍系列鋼珠筆(5色)</h3>
+              <p>NT900</p>
+              <img src="assets/productimg/product5/5-2.jpg">
+              <h3>SKB文明鋼筆 馬卡龍系列鋼珠筆(5色)</h3>
+              <p>NT700</p>
+              <img src="assets/productimg/product5/5-2.jpg">
+              <h3>SKB文明鋼筆 馬卡龍系列鋼珠筆(5色)</h3>
+              <p>NT200</p>
             </div>
           </div>
           <div class="col-12 col-md-4">
             <div class="item">
-              <img src="assets/image/one.jpg">
-              <h3>title</h3>
-              <p>asdfdasfdsfsd</p>
-              <img src="assets/image/one.jpg">
-              <h3>title</h3>
-              <p>asdfdasfdsfsd</p>
-              <img src="assets/image/one.jpg">
-              <h3>title</h3>
-              <p>asdfdasfdsfsd</p>
+              <img src="assets/productimg/product5/5-3.jpg">
+              <h3>SKB文明鋼筆 馬卡龍系列鋼珠筆(5色)</h3>
+              <p>NT700</p>
+              <img src="assets/productimg/product5/5-3.jpg">
+              <h3>SKB文明鋼筆 馬卡龍系列鋼珠筆(5色)</h3>
+              <p>NT200</p>
+              <img src="assets/productimg/product5/5-3.jpg">
+              <h3>SKB文明鋼筆 馬卡龍系列鋼珠筆(5色)</h3>
+              <p>NT2700</p>
             </div>
           </div>
         </div>
