--- a/commodity-4.html
+++ b/commodity-4.html
@@ -112,41 +112,41 @@
         <div class="row">
           <div class="col-12 col-md-4">
             <div class="item">
-              <img src="assets/productimg/1.jpg">
-              <h3>title1</h3>
-              <p>1asdfdasfdsfsd</p>
-              <img src="assets/productimg/2.jpg">
-              <h3>title2</h3>
-              <p>2asdfdasfdsfsd</p>
-              <img src="assets/productimg/3.jpg">
-              <h3>title3</h3>
-              <p>3asdfdasfdsfsd</p>
+              <img src="assets/productimg/product7/7-1.jpg">
+              <h3>Pentel-卡式毛筆</h3>
+              <p>NT:360</p>
+              <img src="assets/productimg/product7/7-1.jpg">
+              <h3>Pentel-卡式毛筆</h3>
+              <p>NT:360</p>
+              <img src="assets/productimg/product7/7-1.jpg">
+              <h3>Pentel-卡式毛筆</h3>
+              <p>NT:360</p>
             </div>
           </div>
           <div class="col-12 col-md-4">
             <div class="item">
-              <img src="assets/productimg/4.jpg">
-              <h3>title4</h3>
-              <p>4asdfdasfdsfsd</p>
-              <img src="assets/productimg/5.jpg">
-              <h3>title5</h3>
-              <p>5asdfdasfdsfsd</p>
-              <img src="assets/productimg/1.jpg">
-              <h3>title6</h3>
-              <p>6asdfdasfdsfsd</p>
+              <img src="assets/productimg/product7/7-1.jpg">
+              <h3>Pentel-卡式毛筆</h3>
+              <p>NT:360</p>
+              <img src="assets/productimg/product7/7-1.jpg">
+              <h3>Pentel-卡式毛筆</h3>
+              <p>NT:360</p>
+              <img src="assets/productimg/product7/7-1.jpg">
+              <h3>Pentel-卡式毛筆</h3>
+              <p>NT:360</p>
             </div>
           </div>
           <div class="col-12 col-md-4">
             <div class="item">
-              <img src="assets/image/one.jpg">
-              <h3>title</h3>
-              <p>asdfdasfdsfsd</p>
-              <img src="assets/image/one.jpg">
-              <h3>title</h3>
-              <p>asdfdasfdsfsd</p>
-              <img src="assets/image/one.jpg">
-              <h3>title</h3>
-              <p>asdfdasfdsfsd</p>
+              <img src="assets/productimg/product7/7-1.jpg">
+              <h3>Pentel-卡式毛筆</h3>
+              <p>NT:360</p>
+              <img src="assets/productimg/product7/7-1.jpg">
+              <h3>Pentel-卡式毛筆</h3>
+              <p>NT:360</p>
+              <img src="assets/productimg/product7/7-1.jpg">
+              <h3>Pentel-卡式毛筆</h3>
+              <p>NT:360</p>
             </div>
           </div>
         </div>
