--- a/commodity-5.html
+++ b/commodity-5.html
@@ -113,41 +113,41 @@
         <div class="row">
           <div class="col-12 col-md-4">
             <div class="item">
-              <img src="assets/productimg/1.jpg">
-              <h3>title1</h3>
-              <p>1asdfdasfdsfsd</p>
-              <img src="assets/productimg/2.jpg">
-              <h3>title2</h3>
-              <p>2asdfdasfdsfsd</p>
-              <img src="assets/productimg/3.jpg">
-              <h3>title3</h3>
-              <p>3asdfdasfdsfsd</p>
+              <img src="assets/productimg/product10/10-1.jpg">
+              <h3>SKB文明鋼筆-SKB鋼筆墨水瓶30ml(3色)</h3>
+              <p>NT250</p>
+              <img src="assets/productimg/product10/10-1.jpg">
+              <h3>SKB文明鋼筆-SKB鋼筆墨水瓶30ml(3色)</h3>
+              <p>NT250</p>
+              <img src="assets/productimg/product10/10-1.jpg">
+              <h3>SKB文明鋼筆-SKB鋼筆墨水瓶30ml(3色)</h3>
+              <p>NT250</p>
             </div>
           </div>
           <div class="col-12 col-md-4">
             <div class="item">
-              <img src="assets/productimg/4.jpg">
-              <h3>title4</h3>
-              <p>4asdfdasfdsfsd</p>
-              <img src="assets/productimg/5.jpg">
-              <h3>title5</h3>
-              <p>5asdfdasfdsfsd</p>
-              <img src="assets/productimg/1.jpg">
-              <h3>title6</h3>
-              <p>6asdfdasfdsfsd</p>
+              <img src="assets/productimg/product10/10-2.jpg">
+              <h3>SKB文明鋼筆-SKB鋼筆墨水瓶30ml(3色)</h3>
+              <p>NT250</p>
+              <img src="assets/productimg/product10/10-2.jpg">
+              <h3>SKB文明鋼筆-SKB鋼筆墨水瓶30ml(3色)</h3>
+              <p>NT250</p>
+              <img src="assets/productimg/product10/10-2.jpg">
+              <h3>SKB文明鋼筆-SKB鋼筆墨水瓶30ml(3色)</h3>
+              <p>NT250</p>
             </div>
           </div>
           <div class="col-12 col-md-4">
             <div class="item">
-              <img src="assets/image/one.jpg">
-              <h3>title</h3>
-              <p>asdfdasfdsfsd</p>
-              <img src="assets/image/one.jpg">
-              <h3>title</h3>
-              <p>asdfdasfdsfsd</p>
-              <img src="assets/image/one.jpg">
-              <h3>title</h3>
-              <p>asdfdasfdsfsd</p>
+              <img src="assets/productimg/product10/10-3.jpg">
+              <h3>SKB文明鋼筆-SKB鋼筆墨水瓶30ml(3色)</h3>
+              <p>NT250</p>
+              <img src="assets/productimg/product10/10-3.jpg">
+              <h3>SKB文明鋼筆-SKB鋼筆墨水瓶30ml(3色)</h3>
+              <p>NT250</p>
+              <img src="assets/productimg/product10/10-3.jpg">
+              <h3>SKB文明鋼筆-SKB鋼筆墨水瓶30ml(3色)</h3>
+              <p>NT250</p>
             </div>
           </div>
         </div>
