--- a/index.html
+++ b/index.html
@@ -214,7 +214,11 @@
        <p>商品品牌：SKB文明鋼筆</p>
        <p>商品品牌：Pentel飛龍文具</p>
       </div>
-      <p>design by CYCU_IM </p>
+      <div class="DIV3">
+       <p>客服專線：0800-000123</p>
+       <p></p>
+      </div>
+      <p>design by CYCU_IM_1st </p>
     </footer>
 <!--  -->
 
