--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		 <!-- Bootstrap CSS -->
 	    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 <!-- 我的css -->
-	    <link rel="stylesheet" type="text/css" href="assets/index.css">
+	    <link rel="stylesheet" type="text/css" href="assets/css/index.css">
 <!-- 我的css -->
 
 	</head>
@@ -35,8 +35,6 @@
 		          <a class="dropdown-item" href="commodity-3.html">原子筆</a>
 		          <a class="dropdown-item" href="commodity-4.html">毛筆</a>
 		          <a class="dropdown-item" href="commodity-5.html">墨水</a>
-		          <div class="dropdown-divider"></div>
-		          <a class="dropdown-item" href="commodity-x.html">客製化鋼筆</a>
 		        </div>
 <!-- -->		      
 		      <li class="nav-item active">
@@ -77,18 +75,9 @@
               </div>
             </form>
            </div>
+           <!-- js:lgoin -->
+           <script type="text/javascript" src="assets/js/login.js"></script>
 
-            <script>
-            // Get the modal
-            var modal = document.getElementById('id01');
-
-            // When the user clicks anywhere outside of the modal, close it
-            window.onclick = function(event) {
-                if (event.target == modal) {
-                    modal.style.display = "none";
-                }
-            }
-            </script>
 
 <!--  -->
             <button class="dropdown-item" onclick="document.getElementById('id02').style.display='block'" style="width:auto;">會員註冊
@@ -120,17 +109,8 @@
               </form>
             </div>
 
-            <script>
-            // Get the modal
-            var modal = document.getElementById('id01');
-
-            // When the user clicks anywhere outside of the modal, close it
-            window.onclick = function(event) {
-              if (event.target == modal) {
-                modal.style.display = "none";
-              }
-            }
-            </script>
+           <!-- js:lgoin -->
+           <script type="text/javascript" src="assets/js/login.js"></script>
 		      
           <li class="nav-item">
             <a class="nav-link" href="#">願望清單</a>
@@ -207,18 +187,24 @@
     </article>
 <!--  -->
     <footer>
-      <div class="DIV1">
-       <img src="assets/image/logo.jpg" class="button_logo">
-      </div>
-      <div class="DIV2">
-       <p>商品品牌：SKB文明鋼筆</p>
-       <p>商品品牌：Pentel飛龍文具</p>
-      </div>
-      <div class="DIV3">
-       <p>客服專線：0800-000123</p>
-       <p></p>
-      </div>
-      <p>design by CYCU_IM_1st </p>
+      <table class="foot">
+        <tr>
+          <td><img src="assets/image/logo.jpg" class="button_logo"></td>
+          <td>
+            <p><img src="assets/icon/factory.jpg" class="foot_icon">廠牌：SKB文明鋼筆、Pentel飛龍文具</p>
+            <p><img src="assets/icon/telephone.jpg" class="foot_icon">客服專線：0800-000789</p>
+            <p><img src="assets/icon/address.jpg" class="foot_icon">地址320桃園市中壢區中北路200號</p>
+            <p><img src="assets/icon/saying.jpg" class="foot_icon"> information management pen shop~</p>
+          </td>
+          <td>
+            
+            <img src="assets/image/skblogo.jpg" class="fact_logo">
+            <img src="assets/image/pentellogo.jpg" class="fact_logo">
+
+          </td>
+        </tr>
+      </table>
+      <h6>design by CYCU_IM_1st </h6>
     </footer>
 <!--  -->
 
