--- a/about.html
+++ b/about.html
@@ -45,11 +45,11 @@
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">會員專區
             </a>
-
+<!-- 登入表單 *****-->
             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
               <button class="dropdown-item" onclick="document.getElementById('id01').style.display='block'">會員登入
               </button> 
-<!-- 登入表單 -->
+
               <div id="id01" class="modal">
              <form class="modal-content animate" action="/action_page.php" method="post">
               <div class="imgcontainer">
@@ -80,7 +80,6 @@
            <!-- js:lgoin -->
            <script type="text/javascript" src="assets/js/login.js"></script>
 
-<!--  -->
             <button class="dropdown-item" onclick="document.getElementById('id02').style.display='block'" style="width:auto;">會員註冊
             </button>
 
@@ -112,9 +111,10 @@
 
            <!-- js:lgoin -->
            <script type="text/javascript" src="assets/js/login.js"></script>
+<!--  -->
           
           <li class="nav-item">
-            <a class="nav-link" href="#">願望清單</a>
+            <a class="nav-link" href="hope.html">願望清單</a>
           </li>
 
           <li class="nav-item">
