--- a/production-2.html
+++ b/production-2.html
@@ -163,7 +163,7 @@
         <li class="breadcrumb-item"><a href="index.html">首頁</a></li>
         <li class="breadcrumb-item">商品專區</li>
         <li class="breadcrumb-item"><a href="commodity-1.html">&diams;鋼筆</a></li>
-        <li class="breadcrumb-item active tit" aria-current="page">國旗鋼筆</li>
+        <li class="breadcrumb-item active tit" aria-current="page">SKB文明鋼筆-國旗鋼筆</li>
       </ol>
     </nav>
 
