--- a/production-6.html
+++ b/production-6.html
@@ -162,7 +162,7 @@
         <li class="breadcrumb-item"><a href="index.html">首頁</a></li>
         <li class="breadcrumb-item">商品專區</li>
         <li class="breadcrumb-item"><a href="commodity-1.html">&diams;鋼筆</a></li>
-        <li class="breadcrumb-item active tit" aria-current="page">八熊堂系列鋼筆</li>
+        <li class="breadcrumb-item active tit" aria-current="page">SKB鋼筆墨水瓶30ml(3色)</li>
       </ol>
     </nav>
 
