--- a/commodity-1.html
+++ b/commodity-1.html
@@ -180,20 +180,20 @@
            <a href="production-1.html">
               <img src="assets/productimg/product1/1-1.jpg">
               <h3>SKB文明鋼筆-八熊堂系列鋼筆</h3>
-              <p>NT1500</p>
+              <p>NT399</p>
             </a>
              <div>
             <a href="production-1.html">
               <img src="assets/productimg/product2/2-1.jpg">
               <h3>SKB文明鋼筆-雅仕系列鋼筆-淺色版(3色)</h3>
-              <p>NT1400</p>
+              <p>NT399</p>
              </div>
             </a>
              <div>
-            <a href="production-1.html">
+            <a href="production-3.html">
               <img src="assets/productimg/product3/3-1.jpg">
               <h3>六角檀木鋼筆(黃檀、綠檀)</h3>
-              <p>NT1300</p>
+              <p>NT399</p>
               </div>
             </a>
             </div>
@@ -203,36 +203,36 @@
              <a href="production-2.html">
                 <img src="assets/productimg/product4/4-1.jpg">
                 <h3>SKB文明鋼筆-國旗鋼筆</h3>
-                <p>NT1600</p>
+                <p>NT399</p>
             </a>
             <a href="production-1.html">
-              <img src="assets/productimg/product5/5-1.jpg">
-              <h3>SKB文明鋼筆</h3>
-              <p>NT1700</p>
+              <img src="assets/productimg/product2/2-1.jpg">
+              <h3>SKB文明鋼筆-雅仕系列鋼筆-淺色版(3色)</h3>
+              <p>NT1010</p>
             </a>
-            <a href="production-1.html">
-              <img src="assets/productimg/product6/6-1.jpg">
-              <h3>SKB文明鋼筆-</h3>
-              <p>NT1800</p>
+            <a href="production-3.html">
+              <img src="assets/productimg/product3/3-1.jpg">
+              <h3>六角檀木鋼筆(黃檀、綠檀)</h3>
+              <p>NT399</p>
             </a>
             </div>
           </div>
           <div class="col-12 col-md-4">
             <div class="item">
             <a href="production-1.html">
-              <img src="assets/productimg/product5/5-3.jpg">
-              <h3>SKB文明鋼筆</h3>
-              <p>NT17000</p>
+              <img src="assets/productimg/product1/1-3.jpg">
+              <h3>SKB文明鋼筆-八熊堂系列鋼筆</h3>
+              <p>NT399</p>
             </a>
             <a href="production-1.html">
-              <img src="assets/productimg/product5/5-2.jpg">
-              <h3>SKB文明鋼筆</h3>
-              <p>NT20000</p>
+              <img src="assets/productimg/product2/2-2.jpg">
+              <h3>SKB文明鋼筆-雅仕系列鋼筆-淺色版(3色)</h3>
+              <p>NT399</p>
             </a>
-            <a href="production-1.html">
-              <img src="assets/productimg/product5/5-1.jpg">
-              <h3>SKB文明鋼筆</h3>
-              <p>NT17700</p>
+            <a href="production-3.html">
+              <img src="assets/productimg/product3/3-1.jpg">
+              <h3>六角檀木鋼筆(黃檀、綠檀)</h3>
+              <p>NT399</p>
             </a>
             </div>
           </div>
