--- a/production-3.html
+++ b/production-3.html
@@ -163,7 +163,7 @@
         <li class="breadcrumb-item"><a href="index.html">首頁</a></li>
         <li class="breadcrumb-item">商品專區</li>
         <li class="breadcrumb-item"><a href="commodity-1.html">&diams;鋼筆</a></li>
-        <li class="breadcrumb-item active tit" aria-current="page">八熊堂系列鋼筆</li>
+        <li class="breadcrumb-item active tit" aria-current="page">六角檀木鋼筆(黃檀、綠檀)</li>
       </ol>
     </nav>
 
