--- a/production-7.html
+++ b/production-7.html
@@ -163,7 +163,7 @@
         <li class="breadcrumb-item"><a href="index.html">首頁</a></li>
         <li class="breadcrumb-item">商品專區</li>
         <li class="breadcrumb-item"><a href="commodity-1.html">&diams;鋼筆</a></li>
-        <li class="breadcrumb-item active tit" aria-current="page">八熊堂系列鋼筆</li>
+        <li class="breadcrumb-item active tit" aria-current="page">攜帶型卡式毛筆-珠光系列</li>
       </ol>
     </nav>
 
