--- a/buy.html
+++ b/buy.html
@@ -178,7 +178,7 @@
             <caption class="tablef1">運送方式:</caption>
             <tr>
                 <td><img src="assets/image/7-11.png"width="160" height="160"></td>
-                <td><img src="assets/image/family.png"width="160" height="160"></td>
+                <td><img src="assets/image/Family.jpg"width="160" height="160"></td>
                 <td><img src="assets/image/cat.jpg"width="160" height="160"></td>
             </tr>
             <tr>
